<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/>
    </parent>

    <groupId>com.eventhive</groupId>
    <artifactId>eventhive-platform</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EventHive - Order Processing Platform</name>
    <description>Event-driven microservices platform: Order, Payment, Inventory, Notification</description>

    <modules>
        <module>shared</module>
        <module>order-service</module>
        <module>payment-service</module>
        <module>inventory-service</module>
        <module>notification-service</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-pulsar.version>1.2.1</spring-pulsar.version>
        <micrometer-tracing.version>1.4.1</micrometer-tracing.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.eventhive</groupId>
               <artifactId>shared</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.pulsar</groupId>
                <artifactId>spring-pulsar</artifactId>
                <version>${spring-pulsar.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-tracing-bridge-otel</artifactId>
                <version>${micrometer-tracing.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
